--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ button {
   position: relative;
 }
 h1 {
+  text-align: center;
   margin-bottom: 20px;
 }
 .button-flex {
@@ -32,6 +33,10 @@ h1 {
   color: white;
   border-radius: 3px;
   font-weight: bold;
+}
+.button-flex .previous-btn:hover,
+.next-btn:hover {
+  background: rgb(27, 79, 183);
 }
 .btn-container {
   display: flex;
@@ -91,6 +96,11 @@ h1 {
   }
   .small-screen-btn{
     display: block;
+  }
+  .content .box {
+    width: 300px;
+    object-fit: cover;
+    border-radius: 3px;
   }
   
 }
